# ChessEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dependencies/: CMakeLists.txt
include/: animation_engine.h  bishop.h  board.h  common.h  engine.h  input_handler.h  king.h  knight.h  pawn.h  piece.h  piece_texture.h  player.h  queen.h  renderer.h  restricted_piece.h  rook.h  square.h  texture_factory.h
src/: animation_engine.cc  bishop.cc  board.cc  engine.cc  input_handler.cc  king.cc  knight.cc  main.cc  pawn.cc  piece.cc  piece_texture.cc  queen.cc  renderer.cc  rook.cc  square.cc  texture_factory.cc
